syntax = "proto3";

package com.fanaujie.ripple.protobuf;

option java_multiple_files = true;
option java_package = "com.fanaujie.ripple.protobuf.chatmessage";

message ChatMessage {
  int64  message_id = 1;
  int64  sender_id = 2;
  int64  receiver_id = 3;
  int64  created_at = 4;
}